Finish functions to write combo functions

--- a/automatic_script_teleporting/generate_script.ipynb
+++ b/automatic_script_teleporting/generate_script.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "id": "201ef0c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shortest_path import filter_categories, get_position\n",
     "from last_stretch import shortest_path\n",
+    "from shortest_path import filter_categories, get_position\n",
+    "\n",
     "from locations import locations\n",
+    "\n",
+    "import re\n",
     "file = open(\"auto_teleport_loop.gpc\", \"w\")\n",
     "dr = \"SWI_RIGHT\"\n",
     "dl = \"SWI_LEFT\"\n",
@@ -21,6 +24,10 @@
     "yb = \"SWI_Y\"\n",
     "bb = \"SWI_B\"\n",
     "xb = \"SWI_X\"\n",
+    "zr = \"SWI_ZR\"\n",
+    "zl = \"SWI_ZL\"\n",
+    "rb = \"SWI_R\"\n",
+    "lb = \"SWI_L\"\n",
     "\n",
     "# Arguments: controller input\n",
     "get_val = \"get_val\"\n",
@@ -42,7 +49,7 @@
     "set_led = \"set_led\"\n",
     "\n",
     "# DISPLAY to screen with print(x_coordinates, y_coordinates, font_size, color, string_variable)\n",
-    "print = \"print\"\n",
+    "prnt = \"print\"\n",
     "\n",
     "# Arguments: controller_input\n",
     "# Different from get_val because it prevents the game from reading it in as a normal input\n",
@@ -53,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 30,
    "id": "0c7c15a5",
    "metadata": {},
    "outputs": [],
@@ -67,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 31,
    "id": "27af2463",
    "metadata": {},
    "outputs": [],
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 32,
    "id": "e6926539",
    "metadata": {},
    "outputs": [],
@@ -93,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
    "id": "f4e3a90a",
    "metadata": {},
    "outputs": [],
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "id": "ef3277ee",
    "metadata": {},
    "outputs": [],
@@ -112,8 +119,9 @@
     "def string_to_variable(target_string):\n",
     "    variable_name = ''\n",
     "    for char in target_string.lower():\n",
-    "        if char == ' ':\n",
+    "        if char in ' -':\n",
     "            variable_name += '_'\n",
+    "        elif char in '().': continue\n",
     "        else:\n",
     "            variable_name += char\n",
     "    return variable_name"
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 35,
    "id": "056b8886",
    "metadata": {},
    "outputs": [],
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "id": "2ae071d8",
    "metadata": {},
    "outputs": [],
@@ -144,50 +152,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "id": "7343ecba",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specific to one kind of script\n",
-    "def initialize_teleport_combo(category):\n",
+    "def initialize_teleport_combo_body(category):\n",
     "    category_index = get_position(category, filter_categories)\n",
     "    button_sequence([plus, yb, min])\n",
     "    dpad_inputs = []\n",
     "    for i in range(category_index):\n",
     "        dpad_inputs.append(dd)\n",
+    "    dpad_inputs.append(ab)\n",
     "    button_sequence(dpad_inputs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 38,
+   "id": "256a132e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_array_in_string(input_array):\n",
+    "    array = []\n",
+    "    i = 0\n",
+    "    ph_string = ''\n",
+    "    check = False\n",
+    "    for char in input_array:\n",
+    "        if re.match('[-0-9]', char):\n",
+    "            ph_string += char\n",
+    "            check = True\n",
+    "        elif check == True and re.match('[^-0-9]', input_array):\n",
+    "            array.append(ph_string)\n",
+    "            ph_string = ''\n",
+    "            check = False\n",
+    "        else:\n",
+    "            continue\n",
+    "    return array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8d7845f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coordinates_to_dpad(coordinates):\n",
+    "\n",
+    "    x_coordinate_button = dr\n",
+    "    y_coordinate_button = dd\n",
+    "    dpad_array = []\n",
+    "\n",
+    "    if coordinates[0] < 0: x_coordinate_button = dl\n",
+    "\n",
+    "    if coordinates[1] < 0: y_coordinate_button = du\n",
+    "    \n",
+    "    if coordinates[0] != 0:\n",
+    "        for i in range(abs(coordinates[0])):\n",
+    "            dpad_array.append(x_coordinate_button)\n",
+    "\n",
+    "    if coordinates[1] != 0:\n",
+    "        for i in range(abs(coordinates[1])):\n",
+    "            dpad_array.append(y_coordinate_button)\n",
+    "    \n",
+    "    dpad_array.append(ab)\n",
+    "    \n",
+    "    # print(dpad_array)\n",
+    "    # print('\\n\\n')\n",
+    "    return dpad_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a58e8127",
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_teleport_combo(name, category, coordinates):\n",
+    "    # coordinates = convert_array_in_string(coordinates)\n",
     "    variable_name = string_to_variable(name)\n",
     "    initialize_combo(variable_name)\n",
-    "    initialize_teleport_combo(category)"
+    "    initialize_teleport_combo_body(category)\n",
+    "    button_presses = coordinates_to_dpad(coordinates)\n",
+    "    button_sequence(button_presses)\n",
+    "    file.write('}\\n\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 41,
    "id": "65b1aba1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    for location in locations[:1]:\n",
+    "    for location in locations[:]:\n",
     "        coordinates, name, category  = shortest_path(location)\n",
     "        write_teleport_combo(name, category, coordinates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 42,
    "id": "e1a464e8",
    "metadata": {},
    "outputs": [
@@ -199,6 +269,321 @@
       "All Locations\n",
       "Steps: 0\n",
       "Coordinates: [0, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: GARE DE LUMIOSE***\n",
+      "All Locations\n",
+      "Steps: 1\n",
+      "Coordinates: [0, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: POKEMON RESEARCH LAB***\n",
+      "All Locations\n",
+      "Steps: 2\n",
+      "Coordinates: [0, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: HOTEL Z***\n",
+      "All Locations\n",
+      "Steps: 3\n",
+      "Coordinates: [0, 3]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: VERT POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 0\n",
+      "Coordinates: [0, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: RACINE CONSTRUCTION***\n",
+      "All Locations\n",
+      "Steps: 3\n",
+      "Coordinates: [1, -2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: RESTAURANT LE NAH***\n",
+      "All Locations\n",
+      "Steps: 2\n",
+      "Coordinates: [1, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE CYCLONE***\n",
+      "Cafes\n",
+      "Steps: 0\n",
+      "Coordinates: [0, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE CLASSE***\n",
+      "Cafes\n",
+      "Steps: 1\n",
+      "Coordinates: [0, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE INTROVERSION***\n",
+      "Cafes\n",
+      "Steps: 2\n",
+      "Coordinates: [0, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: NOUVEAU CAFE***\n",
+      "Cafes\n",
+      "Steps: 3\n",
+      "Coordinates: [0, 3]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: RUST SYNDICATE OFFICE***\n",
+      "Facilities\n",
+      "Steps: 2\n",
+      "Coordinates: [1, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: LUMIOSE SEWERS (SOUTH)***\n",
+      "Facilities\n",
+      "Steps: 1\n",
+      "Coordinates: [1, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: BLEU POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 1\n",
+      "Coordinates: [0, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: VERNAL POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 1\n",
+      "Coordinates: [1, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE WOOF***\n",
+      "All Locations\n",
+      "Steps: 3\n",
+      "Coordinates: [2, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE SOLEIL***\n",
+      "Cafes\n",
+      "Steps: 3\n",
+      "Coordinates: [1, -2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: SHUTTERBUG CAFE***\n",
+      "Cafes\n",
+      "Steps: 2\n",
+      "Coordinates: [1, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: NOUVEAU CAFE TRUCK NO. 2***\n",
+      "Cafes\n",
+      "Steps: 1\n",
+      "Coordinates: [1, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: QUASARTICO INC.***\n",
+      "Facilities\n",
+      "Steps: 2\n",
+      "Coordinates: [1, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: LYSANDRE CAFE***\n",
+      "Facilities\n",
+      "Steps: 3\n",
+      "Coordinates: [1, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: LUMIOSE SEWERS (WEST)***\n",
+      "Facilities\n",
+      "Steps: 2\n",
+      "Coordinates: [-2, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: MAGENTA POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 2\n",
+      "Coordinates: [1, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: MAGENTA PLAZA POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 3\n",
+      "Coordinates: [1, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE POKEMON-AMIE***\n",
+      "Cafes\n",
+      "Steps: 2\n",
+      "Coordinates: [1, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE ROULEAU***\n",
+      "Cafes\n",
+      "Steps: 2\n",
+      "Coordinates: [-2, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE GALLANT***\n",
+      "Cafes\n",
+      "Steps: 2\n",
+      "Coordinates: [2, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE TRISTE***\n",
+      "Cafes\n",
+      "Steps: 3\n",
+      "Coordinates: [2, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: NOUVEAU CAFE TRUCK NO. 3***\n",
+      "All Locations\n",
+      "Steps: 4\n",
+      "Coordinates: [4, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: HOTEL RICHISSIME***\n",
+      "Facilities\n",
+      "Steps: 2\n",
+      "Coordinates: [2, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: LOOKER BUREAU***\n",
+      "Facilities\n",
+      "Steps: 3\n",
+      "Coordinates: [2, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: LUMIOSE MUSEUM***\n",
+      "Facilities\n",
+      "Steps: 4\n",
+      "Coordinates: [2, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: ROUGE POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 3\n",
+      "Coordinates: [-2, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CENTRICO POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 2\n",
+      "Coordinates: [-2, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: RESTAURANT LE YEAH***\n",
+      "Facilities\n",
+      "Steps: 4\n",
+      "Coordinates: [-1, -3]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: SUSHI HIGH ROLLER***\n",
+      "Facilities\n",
+      "Steps: 3\n",
+      "Coordinates: [-1, -2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: RESTAURANT LE WOW***\n",
+      "Facilities\n",
+      "Steps: 2\n",
+      "Coordinates: [-1, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: JUSTICE DOJO***\n",
+      "Facilities\n",
+      "Steps: 1\n",
+      "Coordinates: [-1, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: JAUNE POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 2\n",
+      "Coordinates: [-1, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: HIBERNAL POKEMON CENTER***\n",
+      "Pokemon Centers\n",
+      "Steps: 1\n",
+      "Coordinates: [-1, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE ULTIMO***\n",
+      "Cafes\n",
+      "Steps: 4\n",
+      "Coordinates: [-1, -3]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE ACTION***\n",
+      "Cafes\n",
+      "Steps: 3\n",
+      "Coordinates: [-1, -2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE KIZUNA***\n",
+      "Cafes\n",
+      "Steps: 2\n",
+      "Coordinates: [-1, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: CAFE BATAILLE***\n",
+      "Cafes\n",
+      "Steps: 1\n",
+      "Coordinates: [-1, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 1***\n",
+      "Wild Zones\n",
+      "Steps: 0\n",
+      "Coordinates: [0, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 2***\n",
+      "Wild Zones\n",
+      "Steps: 1\n",
+      "Coordinates: [0, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 3***\n",
+      "Wild Zones\n",
+      "Steps: 2\n",
+      "Coordinates: [0, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 4***\n",
+      "Wild Zones\n",
+      "Steps: 3\n",
+      "Coordinates: [0, 3]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 5***\n",
+      "Wild Zones\n",
+      "Steps: 4\n",
+      "Coordinates: [0, 4]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 6***\n",
+      "Wild Zones\n",
+      "Steps: 3\n",
+      "Coordinates: [1, -2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 7***\n",
+      "Wild Zones\n",
+      "Steps: 2\n",
+      "Coordinates: [1, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 8***\n",
+      "Wild Zones\n",
+      "Steps: 1\n",
+      "Coordinates: [1, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 9***\n",
+      "Wild Zones\n",
+      "Steps: 2\n",
+      "Coordinates: [1, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 10***\n",
+      "Wild Zones\n",
+      "Steps: 3\n",
+      "Coordinates: [1, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 11***\n",
+      "Wild Zones\n",
+      "Steps: 4\n",
+      "Coordinates: [1, 3]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 12***\n",
+      "Wild Zones\n",
+      "Steps: 4\n",
+      "Coordinates: [2, -2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 13***\n",
+      "Wild Zones\n",
+      "Steps: 3\n",
+      "Coordinates: [2, -1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 14***\n",
+      "Wild Zones\n",
+      "Steps: 2\n",
+      "Coordinates: [2, 0]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 15***\n",
+      "Wild Zones\n",
+      "Steps: 3\n",
+      "Coordinates: [2, 1]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 16***\n",
+      "Wild Zones\n",
+      "Steps: 4\n",
+      "Coordinates: [2, 2]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 17***\n",
+      "Wild Zones\n",
+      "Steps: 5\n",
+      "Coordinates: [2, 3]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 18***\n",
+      "Wild Zones\n",
+      "Steps: 6\n",
+      "Coordinates: [2, 4]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 19***\n",
+      "Wild Zones\n",
+      "Steps: 7\n",
+      "Coordinates: [2, 5]\n",
+      "\n",
+      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 20***\n",
+      "Wild Zones\n",
+      "Steps: 8\n",
+      "Coordinates: [2, 6]\n",
       "\n"
      ]
     }
