Refactored code, removed junk, and finished all scripts for writing fast travel functions

--- a/automatic_script_teleporting/generate_script.ipynb
+++ b/automatic_script_teleporting/generate_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "id": "201ef0c8",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "id": "0c7c15a5",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "id": "27af2463",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "id": "e6926539",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "id": "f4e3a90a",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
+   "id": "056b8886",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def button_sequence(button_array):\n",
+    "    for button in button_array:\n",
+    "        button_input(button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "ef3277ee",
    "metadata": {},
    "outputs": [],
@@ -129,48 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "056b8886",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def button_sequence(button_array):\n",
-    "    for button in button_array:\n",
-    "        button_input(button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "2ae071d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initialize_combo(location_variable):\n",
-    "    file.write(f'combo {location_variable}' + r' {' + '\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "7343ecba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Specific to one kind of script\n",
-    "def initialize_teleport_combo_body(category):\n",
-    "    category_index = get_position(category, filter_categories)\n",
-    "    button_sequence([plus, yb, min])\n",
-    "    dpad_inputs = []\n",
-    "    for i in range(category_index):\n",
-    "        dpad_inputs.append(dd)\n",
-    "    dpad_inputs.append(ab)\n",
-    "    button_sequence(dpad_inputs)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "id": "256a132e",
    "metadata": {},
    "outputs": [],
@@ -195,7 +166,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
+   "id": "2ae071d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combo_firstline(desired_name):\n",
+    "    file.write(f'combo {desired_name}' + r' {' + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ff5a74dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def end_combo():\n",
+    "    file.write('}\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c8355f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def write_combo(name, command_array, parameter_array_squared):\n",
+    "#     initialize_combo_firstline(name)\n",
+    "#     for i in range(len(command_array)):\n",
+    "        # cluster_commands(command_array[i], parameter_array_squared[i])\n",
+    "    #     button_sequence(parameter_array_squared[i])\n",
+    "    # end_combo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "c7f41a59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_to_menu():\n",
+    "    combo_firstline(\"map_to_menu\")\n",
+    "    button_sequence([plus, yb, min])\n",
+    "    end_combo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "9d1d24ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def menu_selection(category):\n",
+    "    category_index = get_position(category, filter_categories)\n",
+    "    category = string_to_variable(category)\n",
+    "    combo_firstline(f'{category}_map_to_menu')\n",
+    "    write_command(combo_run, [\"map_to_menu\"])\n",
+    "    dpad_inputs = []\n",
+    "    for i in range(category_index):\n",
+    "        dpad_inputs.append(dd)\n",
+    "    dpad_inputs.append(ab)\n",
+    "    button_sequence(dpad_inputs)\n",
+    "    end_combo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "7343ecba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_reused_combos():\n",
+    "    map_to_menu()\n",
+    "    for category in filter_categories[:-1]:\n",
+    "        menu_selection(category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "c99bff05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def category_teleport_init(category):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "id": "d8d7845f",
    "metadata": {},
    "outputs": [],
@@ -227,37 +292,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "a58e8127",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_teleport_combo(name, category, coordinates):\n",
-    "    # coordinates = convert_array_in_string(coordinates)\n",
+    "def location_selection(name, category, coordinates):\n",
+    "    category = string_to_variable(category)\n",
     "    variable_name = string_to_variable(name)\n",
-    "    initialize_combo(variable_name)\n",
-    "    initialize_teleport_combo_body(category)\n",
+    "    combo_firstline(variable_name)\n",
+    "    write_command(\"combo_run\", [f'{category}_map_to_menu'])\n",
     "    button_presses = coordinates_to_dpad(coordinates)\n",
     "    button_sequence(button_presses)\n",
-    "    file.write('}\\n\\n')"
+    "    end_combo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "id": "65b1aba1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    for location in locations[:]:\n",
+    "    create_reused_combos()\n",
+    "    for location in locations[:3]:\n",
     "        coordinates, name, category  = shortest_path(location)\n",
-    "        write_teleport_combo(name, category, coordinates)"
+    "        location_selection(name, category, coordinates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "id": "e1a464e8",
    "metadata": {},
    "outputs": [
@@ -279,311 +345,6 @@
       "All Locations\n",
       "Steps: 2\n",
       "Coordinates: [0, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: HOTEL Z***\n",
-      "All Locations\n",
-      "Steps: 3\n",
-      "Coordinates: [0, 3]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: VERT POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 0\n",
-      "Coordinates: [0, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: RACINE CONSTRUCTION***\n",
-      "All Locations\n",
-      "Steps: 3\n",
-      "Coordinates: [1, -2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: RESTAURANT LE NAH***\n",
-      "All Locations\n",
-      "Steps: 2\n",
-      "Coordinates: [1, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE CYCLONE***\n",
-      "Cafes\n",
-      "Steps: 0\n",
-      "Coordinates: [0, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE CLASSE***\n",
-      "Cafes\n",
-      "Steps: 1\n",
-      "Coordinates: [0, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE INTROVERSION***\n",
-      "Cafes\n",
-      "Steps: 2\n",
-      "Coordinates: [0, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: NOUVEAU CAFE***\n",
-      "Cafes\n",
-      "Steps: 3\n",
-      "Coordinates: [0, 3]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: RUST SYNDICATE OFFICE***\n",
-      "Facilities\n",
-      "Steps: 2\n",
-      "Coordinates: [1, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: LUMIOSE SEWERS (SOUTH)***\n",
-      "Facilities\n",
-      "Steps: 1\n",
-      "Coordinates: [1, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: BLEU POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 1\n",
-      "Coordinates: [0, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: VERNAL POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 1\n",
-      "Coordinates: [1, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE WOOF***\n",
-      "All Locations\n",
-      "Steps: 3\n",
-      "Coordinates: [2, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE SOLEIL***\n",
-      "Cafes\n",
-      "Steps: 3\n",
-      "Coordinates: [1, -2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: SHUTTERBUG CAFE***\n",
-      "Cafes\n",
-      "Steps: 2\n",
-      "Coordinates: [1, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: NOUVEAU CAFE TRUCK NO. 2***\n",
-      "Cafes\n",
-      "Steps: 1\n",
-      "Coordinates: [1, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: QUASARTICO INC.***\n",
-      "Facilities\n",
-      "Steps: 2\n",
-      "Coordinates: [1, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: LYSANDRE CAFE***\n",
-      "Facilities\n",
-      "Steps: 3\n",
-      "Coordinates: [1, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: LUMIOSE SEWERS (WEST)***\n",
-      "Facilities\n",
-      "Steps: 2\n",
-      "Coordinates: [-2, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: MAGENTA POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 2\n",
-      "Coordinates: [1, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: MAGENTA PLAZA POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 3\n",
-      "Coordinates: [1, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE POKEMON-AMIE***\n",
-      "Cafes\n",
-      "Steps: 2\n",
-      "Coordinates: [1, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE ROULEAU***\n",
-      "Cafes\n",
-      "Steps: 2\n",
-      "Coordinates: [-2, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE GALLANT***\n",
-      "Cafes\n",
-      "Steps: 2\n",
-      "Coordinates: [2, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE TRISTE***\n",
-      "Cafes\n",
-      "Steps: 3\n",
-      "Coordinates: [2, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: NOUVEAU CAFE TRUCK NO. 3***\n",
-      "All Locations\n",
-      "Steps: 4\n",
-      "Coordinates: [4, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: HOTEL RICHISSIME***\n",
-      "Facilities\n",
-      "Steps: 2\n",
-      "Coordinates: [2, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: LOOKER BUREAU***\n",
-      "Facilities\n",
-      "Steps: 3\n",
-      "Coordinates: [2, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: LUMIOSE MUSEUM***\n",
-      "Facilities\n",
-      "Steps: 4\n",
-      "Coordinates: [2, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: ROUGE POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 3\n",
-      "Coordinates: [-2, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CENTRICO POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 2\n",
-      "Coordinates: [-2, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: RESTAURANT LE YEAH***\n",
-      "Facilities\n",
-      "Steps: 4\n",
-      "Coordinates: [-1, -3]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: SUSHI HIGH ROLLER***\n",
-      "Facilities\n",
-      "Steps: 3\n",
-      "Coordinates: [-1, -2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: RESTAURANT LE WOW***\n",
-      "Facilities\n",
-      "Steps: 2\n",
-      "Coordinates: [-1, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: JUSTICE DOJO***\n",
-      "Facilities\n",
-      "Steps: 1\n",
-      "Coordinates: [-1, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: JAUNE POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 2\n",
-      "Coordinates: [-1, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: HIBERNAL POKEMON CENTER***\n",
-      "Pokemon Centers\n",
-      "Steps: 1\n",
-      "Coordinates: [-1, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE ULTIMO***\n",
-      "Cafes\n",
-      "Steps: 4\n",
-      "Coordinates: [-1, -3]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE ACTION***\n",
-      "Cafes\n",
-      "Steps: 3\n",
-      "Coordinates: [-1, -2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE KIZUNA***\n",
-      "Cafes\n",
-      "Steps: 2\n",
-      "Coordinates: [-1, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: CAFE BATAILLE***\n",
-      "Cafes\n",
-      "Steps: 1\n",
-      "Coordinates: [-1, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 1***\n",
-      "Wild Zones\n",
-      "Steps: 0\n",
-      "Coordinates: [0, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 2***\n",
-      "Wild Zones\n",
-      "Steps: 1\n",
-      "Coordinates: [0, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 3***\n",
-      "Wild Zones\n",
-      "Steps: 2\n",
-      "Coordinates: [0, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 4***\n",
-      "Wild Zones\n",
-      "Steps: 3\n",
-      "Coordinates: [0, 3]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 5***\n",
-      "Wild Zones\n",
-      "Steps: 4\n",
-      "Coordinates: [0, 4]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 6***\n",
-      "Wild Zones\n",
-      "Steps: 3\n",
-      "Coordinates: [1, -2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 7***\n",
-      "Wild Zones\n",
-      "Steps: 2\n",
-      "Coordinates: [1, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 8***\n",
-      "Wild Zones\n",
-      "Steps: 1\n",
-      "Coordinates: [1, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 9***\n",
-      "Wild Zones\n",
-      "Steps: 2\n",
-      "Coordinates: [1, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 10***\n",
-      "Wild Zones\n",
-      "Steps: 3\n",
-      "Coordinates: [1, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 11***\n",
-      "Wild Zones\n",
-      "Steps: 4\n",
-      "Coordinates: [1, 3]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 12***\n",
-      "Wild Zones\n",
-      "Steps: 4\n",
-      "Coordinates: [2, -2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 13***\n",
-      "Wild Zones\n",
-      "Steps: 3\n",
-      "Coordinates: [2, -1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 14***\n",
-      "Wild Zones\n",
-      "Steps: 2\n",
-      "Coordinates: [2, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 15***\n",
-      "Wild Zones\n",
-      "Steps: 3\n",
-      "Coordinates: [2, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 16***\n",
-      "Wild Zones\n",
-      "Steps: 4\n",
-      "Coordinates: [2, 2]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 17***\n",
-      "Wild Zones\n",
-      "Steps: 5\n",
-      "Coordinates: [2, 3]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 18***\n",
-      "Wild Zones\n",
-      "Steps: 6\n",
-      "Coordinates: [2, 4]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 19***\n",
-      "Wild Zones\n",
-      "Steps: 7\n",
-      "Coordinates: [2, 5]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: WILD ZONE 20***\n",
-      "Wild Zones\n",
-      "Steps: 8\n",
-      "Coordinates: [2, 6]\n",
       "\n"
      ]
     }
